[package]
name = "terminal-sheaf-harness"
version = "0.1.0"
edition = "2021"
description = "Agent disagreement visualization: wraps sheaf-agents-rs for terminal-facing H⁰/H¹ analysis"
license = "MIT"

[dependencies]
sheaf-agents = { git = "https://github.com/SuperInstance/sheaf-agents-rs" }
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
